<resources>
    <string name="app_name_title" translatable="false">Anitube App</string>
    <string name="nav_home">Головна</string>
    <string name="nav_anime_list">Список аніме</string>
    <string name="nav_library">Бібліотека</string>
    <string name="nav_profile">Профіль</string>
    <string name="nav_search">Пошук</string>
    <string name="nav_collections">Колекції</string>
    <string name="oh_something_went_wrong">Щось пішло не так</string>
    <string name="error_load">Помилка при завантажені</string>
    <string name="help">Допомога</string>
    <string name="repeat">Повторити</string>
    <string name="recommendations">Рекомендуємо</string>
    <string name="screenshots">Скріншоти</string>
    <string name="trailer">Трейлер</string>
    <string name="action_read_more">Детальніше</string>
    <string name="action_read_less">Приховати</string>
    <string name="director">Режисер:</string>
    <string name="year">Рік:</string>
    <string name="type">Тип:</string>
    <string name="anime_status">Cтатус:</string>
    <string name="anime_season">Сезон:</string>
    <string name="anime_last_update_status">Оновлено:</string>
    <string name="studio">Студія:</string>
    <string name="series">Серій:</string>
    <string name="translation">Переклад:</string>
    <string name="dubbers">Даббери:</string>
    <string name="play">Дивитися</string>
    <string name="dub">Озвучка</string>
    <string name="genre">Жанр</string>
    <string name="description">Опис</string>
    <string name="episode_list">Список епізодів</string>
    <string name="close">Закрити</string>
    <string name="close_app">Закрити застосунок</string>
    <string name="app_crashed">Застосунок упав</string>
    <string name="copy">Копіювати</string>
    <string name="log_copied">Лог скопійовано в буфер обміну</string>
    <string name="search_for_anime">Пошук аніме</string>
    <string name="search_history">Історія пошуку</string>
    <string name="clear_history">Осчитити історію</string>
    <string name="player_setting_title">Плеєр</string>
    <string name="open_external_browser">Відкрити в браузері</string>
    <string name="play_with_external_player">Відкрити в іншому плеєрі</string>
    <string name="player_other_title">Інші налаштування</string>
    <string name="play_next_video">Програвати наступне відео</string>
    <string name="hide_progress">Приховати прогрес</string>
    <string name="set_video_speed">Швидкість відео</string>
    <string name="episode_number">Серія %d</string>
    <string name="previous_episode">Попередня серія</string>
    <string name="next_episode">Наступна серія</string>
    <string name="loading_episode">Заватаження відео...</string>
    <string name="searching_anime_on_hikka">Шукаємо аніме на hikka.io...</string>
    <string name="error_dialog_title">Помилка</string>
    <string name="error_dialog_message_unsupport_video_source">Невдалося отримати посилання на відео з даного плеєру. Відкрити в браузері?</string>
    <string name="login_error">Помилка входу</string>
    <string name="login_error_empty_email">Нік не може бути пустим</string>
    <string name="login_error_empty_password">Пароль не може бути пустим</string>
    <string name="login_successful_login">Успішно увійшли!</string>
    <string name="login_title">Авторизація</string>
    <string name="login_text">Увійти</string>
    <string name="login_username">Ім\'я користувача</string>
    <string name="login_password">Пароль</string>
    <string name="login_forget_password">Забули пароль?</string>
    <string name="profile_logout">Вийти</string>
    <string name="profile_group">Група</string>
    <string name="profile_name">Ім\'я</string>
    <string name="profile_register_date">Реєстрація</string>
    <string name="profile_last_activity">Відвідини</string>
    <string name="profile_info">Про себе</string>
    <string name="profile_city">Місто</string>
    <string name="profile_status">Підпис</string>
    <string name="profile_comments">Коментарів</string>
    <string name="profile_comments_rating">Рейтинг коментарів</string>
    <string name="profile_edit">Редагувати профіль</string>
    <string name="anime_franchise">Аніме з серії</string>
    <string name="anime_status_no_watch">Не дивлюсь</string>
    <string name="anime_status_seen">Переглянуто</string>
    <string name="anime_status_will">Заплановано</string>
    <string name="anime_status_watch">Переглядаю</string>
    <string name="anime_status_poned">Відкладено</string>
    <string name="anime_status_adand">Покинуто</string>
    <string name="change_anime_status_title">Замінити статус аніме</string>
    <string name="anime_watch_history">Історія перегляду</string>
    <string name="anime_favorites_list">Мої закладки</string>
    <string name="anime_all_list">Весь список</string>
    <string name="action_share">Поділитися</string>
    <string name="action_open_on_hikka">Відкрити на hikka.io</string>
    <string name="action_copy_url">Копіювати посилання</string>
    <string name="action_set_unwatch_status">Не переглянуто</string>
    <string name="action_set_watch_status">Переглянуто</string>
    <string name="action_open_in_browser">Відкрити в браузері</string>
	<string name="dialog_confirm_title">Підтвердьте дію</string>
	<string name="dialog_confirm_logout">Ви дійсно хочете вийти з аккаунту?</string>
	<string name="dialog_confirm_delete_from_history">Ви дійсно хочете видалити з історії перегляду?</string>
	<string name="dialog_confirm_delete_from_bookmarks">Ви дійсно хочете видалити із закладок?</string>
    <string name="release_action_add_to_list">Додати до списку</string>
    <string name="release_action_add_to_bookmarks">Додати до улюблених</string>
    <string name="release_action_remove_from_bookmarks">Видалити з улюблених</string>
    <string name="collection_anine_count">%d аніме</string>
    <string name="episode_count">%d епізод</string>
    <string name="home_new_anime">Новинки</string>
    <string name="release_calendar">Календар</string>
    <string name="release_genres">Жанр</string>
    <string name="home_best_anime">Найкраще аніме cезону</string>
    <string name="home_new_collections">Нові колекції</string>
    <string name="random_anime">Випадкове аніме</string>
    <string name="settings">Налаштування</string>
    <string name="theme_cat_title">Тема</string>
    <string name="dynamic_colors_disabled_summary">Динамічні кольори вимкнено</string>
    <string name="dynamic_colors_enabled_summary">Динамічні кольори увімкнено</string>
    <string name="dynamic_colors_title">Динамічні кольори</string>
    <string name="theme_mode_pref_title">Тема</string>
    <string name="others_cat_title">Інше</string>
    <string name="load_additional_anime_information_title">Завантажувати додаткову інформацію</string>
    <string name="load_additional_anime_information_summary">Завантажувати додаткову інформацію про аніме таку як додана серія, тип</string>
    <string name="about">Про додаток</string>
    <string name="version">Версія</string>
    <string name="source_code">Відкритий код</string>
    <string name="restore">Відновити налаштування</string>
    <string name="backup">Резервна копія налаштувань</string>
    <string name="telegram_link">https://t.me/anitube_app</string>
    <string name="github_link">https://github.com/MrIkso/AnitubeApp</string>
    <string name="version_summary">Версія %s білд (%d)</string>
    <string name="state_no_data">Немає даних</string>
    <string name="state_no_data_history_desc">Почніть переглядати аніме і тут з\'являється історія вашого перегляду</string>
	<string name="state_no_data_comments_desc">Коментарі відсутні</string>
    <string name="state_no_data_collection_desc">Колекція порожня</string>
    <string name="state_no_data_anime_list_desc">Список аніме порожній</string>
    <string name="state_no_data_years_list_desc">Список років порожній</string>
    <string name="state_no_data_genres_list_desc">Список жанрів порожній</string>
    <string name="state_no_data_favotie_anime_list_desc">Список "%s" порожній</string>
    <string name="state_no_data_search_desc">За вашим пошуковим запитом нічого не знайдено</string>
    <string name="just_now">Тільки що</string>
    <string name="yesterday">Вчора</string>
    <string name="watched_time">Час перегляду:</string>
    <string name="watching_time">Переглянуто до: %s</string>
    <string name="watching_time_full">Переглянуто повністю</string>
    <string name="download_torrent">Торрент</string>
    <string name="download_torrent_file">.torrent</string>
    <string name="download_magnet">Примагнітитися</string>
    <string name="cannot_download">Невдалося завантажити файл</string>
    <string name="problem_location_download">Неможливо завантажити по вказаному шляху</string>
    <string name="download_pending">Завантаження розпочалося</string>
	<string name="comments">Коментарі</string>
    <string name="don_t_have_an_account">Немає акаунту</string>
    <string name="sign_up">Реєстрація</string>
    <string name="register">Зареєсруватися</string>
    <string name="user_email">Ваш Е-Mail</string>
    <string name="email_hint">Вам буде надіслано лист з посиланням для активації акаунту</string>
    <string name="register_error_empty_user_name">Ім\'я користувача не повинно бути пустим</string>
    <string name="registration_error">Помилка реєстрації</string>
    <string name="comments_send">Відправити коментар</string>
    <string name="your_comment">Ваш коментар</string>
    <string name="idm_not_found">1DM не встановлено</string>
    <string name="dvget_not_found">ADM не встановлено</string>
    <string name="quality_choser_title">Якість відео</string>
    <string name="message_error_no_internet">Відсутнє інтернет-з\'єднання</string>
    <string name="message_error_video_has_empty_stream_lisnks">Виникла помилка, посилання на файли пусті</string>
    <string name="pref_restart_dialog_title">Потрібний перезапуск</string>
    <string name="pref_restart_dialog_description">Щоб отримати ефект від цих змін, потрібен перезапуск застосунку. Перезапусти застосунок зараз?</string>
    <string name="autoplay_next_episode_disabled_summary">Автоматичне відтворення наступного відео вимкнено</string>
    <string name="autoplay_next_episode_enabled_summary">Автоматичне відтворення наступного відео увімкнено</string>
    <string name="autoplay_next_episode_title">Відтворення наступного відео</string>
    <string name="double_tap_seek">Подвійний тап для перемотки</string>
    <string name="swipe_controls">Керування свайпами</string>
    <string name="swipe_controls_summary">Проведіть по екрану, щоб відрегулювати яскравість і гучість</string>
    <string name="disabled">Вимкнено</string>
    <string name="player_auto_continue_play">Автостарт з попередньої позиції</string>
    <string name="player_auto_continue_play_summary">Відтворення буде розпочинатися з останньої збереженої позиції</string>
    <string name="dialog_continue_title">Продовжити?</string>
    <string name="dialog_continue_playning_summary">Продовжити відтворення з %s?</string>
    <string name="state_no_recent_search_desc">Почніть шукати аніме і тут з\'явиться історія вашого пошуку</string>
    <string name="pause">Пауза</string>
    <string name="resume">Відновити</string>
    <string name="fast_seek">Швидка перемотка</string>
    <string name="hikka_login_succes">Ви успішно авторизувались в hikka.io!</string>
    <string name="hikka_login">Увійти на hikka.io для сихронізації ваших переглядів на сайт</string>
    <string name="hikka_loggined">Вітаємо %s! \nНатисніть щоб вийти</string>
    <string name="read_more_details">Детальніше</string>
    <string name="error_loading_torrents">Не вдалося завантажити торренти. Спробуйте пізніше.</string>
    <string name="anime_not_found_on_hikka">Аніме не було знайдено на hikka.io</string>
    <string name="message_error_short_query">Пошуковий запит має бути не менше 3 символів</string>
    <string name="back">Назад</string>
</resources>