<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	 xmlns:android="http://schemas.android.com/apk/res/android"
	 xmlns:app="http://schemas.android.com/apk/res-auto"
	 xmlns:tools="http://schemas.android.com/tools"
	 android:layout_height="match_parent"
	 android:layout_width="match_parent"
	 android:scrollbars="none">

	<RelativeLayout
		 android:layout_height="match_parent"
		 android:layout_width="match_parent"
		 android:layout_marginLeft="30dp"
		 android:layout_marginRight="30dp">

		<TextView
			 android:layout_height="wrap_content"
			 android:layout_width="match_parent"
			 android:gravity="center"
			 android:layout_margin="50dp"
			 android:textSize="35dp"
			 android:id="@+id/sign_in_tv"
			 android:text="@string/login_title"
			 android:textStyle="bold" />

		<EditText
			 android:layout_height="wrap_content"
			 android:layout_width="match_parent"
			 android:layout_marginEnd="10dp"
			 android:drawablePadding="20dp"
			 android:padding="20dp"
			 android:layout_marginTop="10dp"
			 android:layout_marginStart="10dp"
			 android:layout_marginBottom="10dp"
			 android:layout_below="@+id/sign_in_tv"
			 android:background="@null"
			 android:drawableLeft="@drawable/baseline_person_outline_24"
			 android:hint="@string/login_username"
			 android:id="@+id/user_name_et" />

		<EditText
			 android:layout_height="wrap_content"
			 android:layout_width="match_parent"
			 android:layout_below="@+id/user_name_et"
			 android:drawablePadding="20dp"
			 android:background="@null"
			 android:drawableLeft="@drawable/baseline_password_24"
			 android:hint="@string/login_password"
			 android:layout_margin="10dp"
			 android:padding="20dp"
			 android:inputType="textPassword"
			 android:id="@+id/password_et" />

		<com.google.android.material.button.MaterialButton
			 android:layout_height="wrap_content"
			 android:layout_width="match_parent"
			 android:layout_below="@+id/password_et"
			 android:ellipsize="end"
			 android:layout_margin="20dp"
			 android:layout_centerHorizontal="true"
			 style="@style/Widget.Material3.Button.OutlinedButton.Icon"
			 android:id="@+id/login_btn"
			 android:text="@string/login_text" />

		<TextView
			 android:layout_height="wrap_content"
			 android:layout_width="wrap_content"
			 android:layout_below="@id/login_btn"
			 android:layout_margin="20dp"
			 android:layout_centerHorizontal="true"
			 android:id="@+id/forget_pass"
			 android:text="@string/login_forget_password" />

	</RelativeLayout>

</ScrollView>